[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyexcel2bson"
version = "0.1.1"
description = "Excel 파일을 시트별 BSON 파일로 변환하는 CLI 도구"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.0.0",
    "pymongo>=4.0.0",   # bson 모듈 포함
]
readme = "README.md"

[project.scripts]
py-excel-to-bson = "PyExcelToBSON.main:main"
