[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyexcel2bson"
version = "0.1.9"
description = "A CLI tool that converts each sheet of an Excel (`.xlsx`) file into a BSON (Binary JSON) file."
requires-python = ">=3.6"
dependencies = [
    "openpyxl>=3.0.0",
    "bson>=0.5.7",
]
readme = "README.md"

[project.scripts]
pyexcel2bson = "pyexcel2bson.main:main"
